
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.kido.fileuploader";
option java_outer_classname = "FileUploader";
option objc_class_prefix = "KFL";

package fileuploader;

// The greeting service definition.
service Uploader {
  rpc uploadFile (stream FileRequest) returns (FileReply) {}
}


// The request message containing part of the file.
message FileRequest {
   int64 offset = 1;// 当前分块的起始点相对于整个文件的位置
   bytes data = 2; // 当前分块的文件字节数组
}



// The response message containing the greetings
message FileReply {
  int32 status = 1;
  string message = 2;
}
